# osqp-matlab-cmake-buildsystem

./: CMakeLists.txt  README.md  run_osqp_tests_no_codegen.m.in
.github/workflows/: matlab.yml
